Failing WPT css/css-grid/alignment/grid-content-distribution-[026|027].html
Categories
(Core :: Layout: Grid, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox136 | --- | fixed |
People
(Reporter: twisniewski, Assigned: TYLin)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Reporter | ||
Updated•1 year ago
|
Updated•1 year ago
|
Comment 1•1 month ago
|
||
It looks like this is about fallback alignment behavior when the grid item (and hence the grid tracks) are larger than the grid.
In http://wpt.live/css/css-grid/alignment/grid-content-distribution-026.html at least, the grid track is wider than the grid, and it uses space-evenly
alignment, and the test seems to expect that to end up with start alignment, but we use unsafe-center alignment (overflowing equally off the left and right sides, and off bottom/top sides). So we place it at the wrong position.
Assignee | ||
Comment 2•1 month ago
|
||
Per the CSS Align specification, 'space-between', 'space-around', and
'space-evenly' should use a "safe" fallback alignment when overflow occurs. This
patch implements that behavior, renames the function for clarity, and removes
unused parameters.
Updated•1 month ago
|
Description
•