Bug 1878371 - Fix overflow alignment for distributed alignment values for grid. r=layout-grid-reviewers,dholbert

Per the CSS Align specification, 'space-between', 'space-around', and
'space-evenly' should use a "safe" fallback alignment when overflow occurs. This
patch implements that behavior, renames the function for clarity, and removes
unused parameters.

Differential Revision: https://phabricator.services.mozilla.com/D234755